--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Alexva397/react-google-books-app#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4"
   },
