--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Alexva397/react-google-books-app#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.13.2"
